--- a/p2.md
+++ b/p2.md
@@ -6,13 +6,13 @@
 
 [YouTube Video](http://www.youtube.com/watch?v=RMINSD7MmT4)
 
-For our video prototype we decided to make a powerpoint video of our system that showcases how the system can be used by a user on a table in order to identify a wildflower and then pin it to a map, view it's description and save it to a wildflower journal. The video starts with the user taking a photo of the wildflower they would like to identify and then goes through the analyzing phase in order to find a match. Once a match is found the user is then able to pick one of 4 options, pining the wildflower to a map for others to view where the wildflower was sighted, adding the wildflower to their my flowers journal, viewing it's description and interesting facts, and or just going back to the home screen. On each options page there are other steps the user may take. If the users chooses the pin to map option then the user can pin their flower on the map and then click on the image of their sighting in order to view sightings from other users of the same flower. If the user decides to learn more about the wildflower then they are taken to a page that includes the wildflowers common name and family name, it's rarity and whether it is edible. The page contains three drop down menus that the user can click on as well that contain a full description of the flower, any interesting facts about it and a map of where it can be found. If the user decides to add the flower to their my wildflowers journal then the image of the flower will show up at the end of the list. Cliking on it brings up information that the user can add/edit that is relevant to it. Additional pictures can be viewed here as well. Lastly if the user is done they can simply press the home button to start the process all over again. 
+For our video prototype we decided to make a powerpoint video of our system that showcases how the system can be used by a user on a table in order to identify a wildflower and then pin it to a map, view it's description and save it to a wildflower journal. The video starts with the user taking a photo of the wildflower they would like to identify and then goes through the analyzing phase in order to find a match. Once a match is found the user is then able to pick one of 4 options, pining the wildflower to a map for others to view where the wildflower was sighted, adding the wildflower to their my flowers journal, viewing it's description and interesting facts, and or just going back to the home screen. On each options page there are other steps the user may take. If the users chooses the pin to map option then the user can pin their flower on the map and then click on the image of their sighting in order to view sightings from other users of the same flower. If the user decides to learn more about the wildflower then they are taken to a page that includes the wildflowers common name and family name, it's rarity and whether it is edible. The page contains three drop down menus that the user can click on as well that contain a full description of the flower, any interesting facts about it and a map of where it can be found. If the user decides to add the flower to their my wildflowers journal then the image of the flower will show up at the end of the list. Cliking on it brings up information that the user can add/edit that is relevant to it. Additional pictures can be viewed here as well. Lastly if the user is done they can simply press the home button to start the process all over again. (All wildflowers photos except the buffalo bean are from http://www.albertawow.com/wildflowers/alberta_wildflowers.htm#)
 
 ## Storyboard
 
 ![](https://kowther.github.io/FieldGuide-481/storyboard.jpg)
 
-The storyboard showcases the three tasks the user can engage in once they have correctly identified a wildflower. ‘Pin to ‘Start’ allows the user to pin their location to a global map (1-4). Clicking on a pin displays the pinned sighting of all users at that specific location. The ‘Learn more’ task (5-6) gives the user a detailed description/interesting facts about their find. This is the traditional task associated with field guides. Lastly, the user can add their photo to their personal collection of sightings using ‘Add to My Wildflowers’ (7-9). Their photo is added to the end of the list. The user can then click on the photo, opening a drop-down page, where they can add/change a couple more images of that wildflower and add notes. Pressing the ‘home’ icon brings the user back to the main screen (10-11). 
+The storyboard showcases the three tasks the user can engage in once they have correctly identified a wildflower. ‘Pin to ‘Start’ allows the user to pin their location to a global map (1-4). Clicking on a pin displays the pinned sighting of all users at that specific location. The ‘Learn more’ task (5-6) gives the user a detailed description/interesting facts about their find. This is the traditional task associated with field guides. Lastly, the user can add their photo to their personal collection of sightings using ‘Add to My Wildflowers’ (7-9). Their photo is added to the end of the list. The user can then click on the photo, opening a drop-down page, where they can add/change a couple more images of that wildflower and add notes. Pressing the ‘home’ icon brings the user back to the main screen (10-11). (All wildflowers photos except the buffalo bean are from http://www.albertawow.com/wildflowers/alberta_wildflowers.htm#)
 
 ## Task-Centered System Walkthrough
 
