Added to the brainstorming and reflection

--- a/p2.md
+++ b/p2.md
@@ -27,6 +27,8 @@ __Brainstorming Session__: Each group member came up with 7-8 sketches of variou
 * [Page 2](https://kowther.github.io/FieldGuide-481/brainstorm_02.jpg)
 * [Page 3](https://kowther.github.io/FieldGuide-481/brainstorm_03.jpg)
 
+__Affinity Diagramming Session__: We organized each of the above sketches into 4 groups: Main Menu, identification techniques, journal/log/history, and individual flower descriptions.
+
 ![](https://kowther.github.io/FieldGuide-481/AffinityDiagram.jpg "Image of Affinity Diagram")
 
 __STEPHANIE__
@@ -50,4 +52,4 @@ This is the screen that the user sees when they want to identify their wildflowe
 ## Reflection
 
 __EVERYONE__
-We found that having more brainstorming sessions would have been helpful to get more ideas. We also felt that having more of the funnelling effect would have been beneficial. Having just one brainstorming session and then going right into the storyboard and the video prototype didn't give us as much time as we would have liked to generate a lot of ideas and then refine them and then create more ideas based on those and then refine again. The brainstorming was very helpful in generating different types of idea...
+We found that having more brainstorming sessions would have been helpful to get more ideas. We also felt that having more of the funnelling effect would have been beneficial. Having just one brainstorming session and then going right into the storyboard and the video prototype didn't give us as much time as we would have liked to generate a lot of ideas and then refine them and then create more ideas based on those and then refine again. The brainstorming was very helpful in generating different types of idea... The affinity diagramming session helped us recognize the different visions that each group member had for different aspects of the system.
