--- a/p2.md
+++ b/p2.md
@@ -6,13 +6,13 @@
 
 [Video Protoype Link](https://youtu.be/hGRAoFOrvsY)
 
-For our video prototype we decided to make a powerpoint video of our system that showcases how the system can be used by a user on a table in order to identify a wildflower and then pin it to a map, view it's description and save it to a wildflower journal. The video starts with the user taking a photo of the wildflower they would like to identify and then goes through the analyzing phase in order to find a match. Once a match is found the user is then able to pick one of 4 options, pining the wildflower to a map for others to view where the wildflower was sighted, adding the wildflower to their my flowers journal, viewing it's description and interesting facts, and or just going back to the home screen. On each options page there are other steps the user may take. If the users chooses the pin to map option then the user can pin their flower on the map and then click on the image of their sighting in order to view sightings from other users of the same flower. If the user decides to learn more about the wildflower then they are taken to a page that includes the wildflowers common name and family name, it's rarity and whether it is edible. The page contains three drop down menus that the user can click on as well that contain a full description of the flower, any interesting facts about it and a map of where it can be found. If the user decides to add the flower to their my wildflowers journal then the image of the flower will show up at the end of the list. Cliking on it brings up information that the user can add/edit that is relevant to it. Additional pictures can be viewed here as well. Lastly if the user is done they can simply press the home button to start the process all over again. (All wildflowers photos except the buffalo bean are from http://www.albertawow.com/wildflowers/alberta_wildflowers.htm#)
+For our video prototype, we created a PowerPoint video of our system. The video starts with the user taking a photo of a wildflower they would like to identify. The photo is analyzed with our photo recognition software to find a match. Once a match is found the user is then able to pick up to three tasks, pinning the wildflower to a map for others to view where the wildflower was sighted, adding the wildflower to a photo journal, and learning more by viewing its detailed description and interesting facts. (All wildflowers photos except the buffalo bean are from http://www.albertawow.com/wildflowers/alberta_wildflowers.htm#)
 
 ## Storyboard
 
 ![](https://kowther.github.io/FieldGuide-481/storyboard.jpg)
 
-The storyboard showcases the three tasks the user can engage in once they have correctly identified a wildflower. ‘Pin to ‘Start’ allows the user to pin their location to a global map (1-4). Clicking on a pin displays the pinned sighting of all users at that specific location. The ‘Learn more’ task (5-6) gives the user a detailed description/interesting facts about their find. This is the traditional task associated with field guides. Lastly, the user can add their photo to their personal collection of sightings using ‘Add to My Wildflowers’ (7-9). Their photo is added to the end of the list. The user can then click on the photo, opening a drop-down page, where they can add/change a couple more images of that wildflower and add notes. Pressing the ‘home’ icon brings the user back to the main screen (10-11). (All wildflowers photos except the buffalo bean are from http://www.albertawow.com/wildflowers/alberta_wildflowers.htm#)
+The storyboard showcases the three tasks the user can engage in once they have correctly identified a wildflower. ‘Pin to Map’ allows the user to pin their location to a global map (1-4). Clicking on a pin displays the pinned sightings of all users at that specific location. The ‘Learn More’ task (5-6) gives the user detailed information about their find. This is the traditional task associated with field guides. Lastly, the user can add their photo to their personal collection of sightings using ‘Add to My Wildflowers’ (7-9). Their photo is added to the end of the list. The user can then click on the photo, opening a drop-down page, where they can add/change a few more images of that wildflower and add notes. Pressing the ‘home’ icon brings the user back to the main screen (10-11). (All wildflowers photos except the buffalo bean are from http://www.albertawow.com/wildflowers/alberta_wildflowers.htm#)
 
 ## Task-Centered System Walkthrough
 
@@ -27,7 +27,7 @@ __Brainstorming Session__: Each group member came up with 7-8 sketches of variou
 * [Page 2](https://kowther.github.io/FieldGuide-481/brainstorm_02.jpg)
 * [Page 3](https://kowther.github.io/FieldGuide-481/brainstorm_03.jpg)
 
-__Affinity Diagramming Session__: We organized each of the above sketches into 4 groups: Main Menu, identification techniques, journal/log/history, and individual flower descriptions.
+__Affinity Diagramming Session__: We organized each of the above sketches into 4 groups: main menu, identification techniques, journal/log/history, and individual flower descriptions.
 
 ![](https://kowther.github.io/FieldGuide-481/AffinityDiagram.jpg "Image of Affinity Diagram")
 
@@ -37,7 +37,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus ni
 ![](https://kowther.github.io/FieldGuide-481/annotated_myflowers.png "Close up 1: Photo Storage")
 _Close up 1: Photo Storage_
 
-We found that many of the current apps do not have the option of taking and storing your own photos of wildflower sightings. For our idea, we chose a grid layout as it allows for more items displayed at a time on the screen. Each item represents a photo taken of a flower sighting. The photos can be sorted by date found or by name.  The sketch illustrates that when a photo is clicked a drop-down page pops up. The page has the date, time, name of the flower, and space for notes. It has a button that takes you to the flower description page (not shown). It also has space for a few secondary photos of that plant (there is a limit of how many secondary photos). The user has the option of setting any photo as the primary photo. The photos can be saved onto the phone's storage or shared on social media. 
+Many of the current apps do not have the option of taking and storing your own photos of wildflower sightings. Our researched showed that there is an interest in this type of feature. For our idea, once a user has identified a wildflower, they can store their photo in a photo journal. The sketch illustrates that when a photo is clicked a drop-down page pops up. The page has the date, time, name of the flower, and space for notes. It has a button that takes you to the flower description page (not shown). It also has space for a few secondary photos of that plant (there is a limit of how many secondary photos). The user has the option of setting any photo as the primary photo. The photos can be saved onto the phone's storage or shared on social media. 
 
 ![](https://kowther.github.io/FieldGuide-481/descriptionannotationv2.png "Close up 2: Description Page")
 _Close up 2: Description Page_
