--- a/p2.md
+++ b/p2.md
@@ -42,7 +42,7 @@ Many of the current apps do not have the option of taking and storing your own p
 ![](https://kowther.github.io/FieldGuide-481/descriptionannotationv2.png "Close up 2: Description Page")
 _Close up 2: Description Page_
 
-Based on our research done in P1 we found that potential users of a field guide app would like a description page that is oranginzed and not very cluttered. For this reason we decided that the most important information like the name of the flower should be available to the user right as they access the description page. Other more detailed information should be easily accessible by the user if they wish to learn more about the flower. This includes the full description, any interesting information about it and access to the map which shows the users locations of where to find the flower based on other users sightings and their own. In our research we discovered that some users are not interested in all of the facts about the flower and are just interested in knowing what it is, where to find it and the interesting facts about it, while other would like the more detailed description. In designing this page we decided that drop down menus would allow users to be able to acces the information if they wanted to and if not then it wouldn't be distracting to them. Also, we decided under the main image that the user should be able to swipe through the images again to keep the page organized and easily usable. 
+Based on our research done in P1 we found that potential users of a field guide app would like a description page that is organized and not very cluttered. For this reason, we decided that the most important information like the name of the flower should be available to the user right as they access the description page. Other more detailed information should be easily accessible by the user if they wish to learn more about the flower. This includes the full description, any interesting information about it and access to the map which shows the users locations of where to find the flower based on other users’ sightings and their own. In our research, we discovered that some users are not interested in all the facts about the flower and are just interested in knowing what it is, where to find it and the interesting facts about it, while other would like the more detailed description. In designing this page, we decided that drop down menus would allow users to be able to access the information if they desired. Also, we decided under the main image that the user should be able to swipe through the images again to keep the page organized and easily usable.
 
 ![](https://kowther.github.io/FieldGuide-481/annotate_recognition.png "Close up 3: Recognition Page")
 _Close up 3: Recognition Page_
@@ -52,4 +52,11 @@ This is the screen that the user sees when they want to identify their wildflowe
 ## Reflection
 
 __EVERYONE__
-We found that having more brainstorming sessions would have been helpful to get more ideas. We also felt that having more of the funnelling effect would have been beneficial. Having just one brainstorming session and then going right into the storyboard and the video prototype didn't give us as much time as we would have liked to generate a lot of ideas and then refine them and then create more ideas based on those and then refine again. The brainstorming was very helpful in generating different types of idea... The affinity diagramming session helped us recognize the different visions that each group member had for different aspects of the system.
+Having just one brainstorming session and then going right into the storyboard and the video prototype didn't give us as much time to go through several iterations to refine our ideas. Although the brainstorming session was very helpful in generating different types of idea, we couldn’t explore many different creative avenues. We focused our ideas on the results of our investigation in P1. We combine the brainstorming session with the affinity diagramming session. It helped us recognize the different visions that each group member had for different aspects of the system.
+
+The storyboard came together easily because we were able to produce fairly complete tasks from the brainstorming session. We concentrated on the tasks involved after a correct identification of a wildflower as this gave us a range of tasks to explore instead of just the one identification task. 
+NOT COMPLETE
+- Talk about PowerPoint presentation pros/cons
+- Talk about video prototype and the challenges with that. Paper one would have been ideal but lack of time forced us to go digital. 
+- Couldn’t incorporate video into powerpoint
+
