Updated brainstorming section and reflection

--- a/p2.md
+++ b/p2.md
@@ -34,6 +34,8 @@ __Affinity Diagramming Session__: We organized each of the above sketches into 4
 __STEPHANIE__
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
 
+After examining the sketches, we chose to elaborate on the 3 most promising ideas:
+
 ![](https://kowther.github.io/FieldGuide-481/annotated_myflowers.png "Close up 1: Photo Storage")
 _Close up 1: Photo Storage_
 
@@ -49,12 +51,19 @@ _Close up 3: Recognition Page_
 
 This is the screen that the user sees when they want to identify their wildflower using image recognition. If they want to use their camera to take a new photo, a distinct box indicates the frame in which the user should position their view of the flower before pressing the ready button. Users also have the option to go to their Gallery/Camera Roll to use an image that they took before.
 
+From the above ideas, we chose to create a storyboard and prototype from idea 2 (wildflower info after being identified) because it is one of the most prominent features of our system. We wanted to elaborate on what the user would be able to do after identifying a flower, as well as organize how these aspects of the system would be displayed.
+
 ## Reflection
 
 __EVERYONE__
 Having just one brainstorming session and then going right into the storyboard and the video prototype didn't give us as much time to go through several iterations to refine our ideas. Although the brainstorming session was very helpful in generating different types of idea, we couldn’t explore many different creative avenues. We focused our ideas on the results of our investigation in P1. We combine the brainstorming session with the affinity diagramming session. It helped us recognize the different visions that each group member had for different aspects of the system.
 
-The storyboard came together easily because we were able to produce fairly complete tasks from the brainstorming session. We concentrated on the tasks involved after a correct identification of a wildflower as this gave us a range of tasks to explore instead of just the one identification task. 
+The storyboard came together easily because we were able to produce fairly complete tasks from the brainstorming session. We concentrated on the tasks involved after a correct identification of a wildflower as this gave us a range of tasks to explore instead of just the one identification task.
+
+We used PowerPoint to create our low-fidelity prototype. Initially we wanted to do a paper prototype, but PowerPoint was a better choice given our individual schedule constraints. Using PowerPoint allowed each team member to work from home. PowerPoint also allowed us to easily add animations and transistions to the views of our system that improved the clarity of the task being demonstrated. It also improved the fluidity of the video prototype. Animations and transitions would have been more time-consuming to show if we had used a paper prototype or stop motion.
+
+When we were ready to record the video prototype, we ran into problems playing the slideshow on our mobile device (an issue that wouldn't have existed if we'd used a paper prototype). If we were to do this again, we would likely use a paper prototype instead of digital media because it would have been faster (we lost some time fixing the bugs with transitions and animations when playing the slideshow our a mobile device). While the PowerPoint definitely made it easier/faster to do animations and transitions, we most likely could have sufficiently demonstrated the functionality of our system without these aethetic features.
+
 NOT COMPLETE
 - Talk about PowerPoint presentation pros/cons
 - Talk about video prototype and the challenges with that. Paper one would have been ideal but lack of time forced us to go digital. 
