Minor changes to previous update

--- a/p2.md
+++ b/p2.md
@@ -64,11 +64,10 @@ We used PowerPoint to create our low-fidelity prototype. Initially we wanted to 
 
 When we were ready to record the video prototype, we ran into problems playing the slideshow on our mobile device (an issue that wouldn't have existed if we'd used a paper prototype). If we were to do this again, we would likely use a paper prototype instead of digital media because it would have been faster (we lost some time fixing the bugs with transitions and animations when playing the slideshow our a mobile device). While the PowerPoint definitely made it easier/faster to do animations and transitions, we most likely could have sufficiently demonstrated the functionality of our system without these aethetic features.
 
-We were originally going to film a video which could played in the powerpoint in order to show how a user would actually take a photo with the sytem but we were unable to get it imbedded into the powerpoint. This was unfortunate, but we were able to find a different way to represent the photo taking process that works seemlessly and looks a lot like what it would have looked like if we had taken the actual video. Again using a peper prototype would have eliminated this issue, but finding a way to make it work was well worth it. 
+We were originally going to film a video which could have played in the powerpoint in order to show how a user would actually take a photo with the sytem, but we were unable to get it imbedded into the powerpoint. This cost us more time and was unfortunate, but we were able to find a different way to represent the photo taking process that works seemlessly and looks a lot like what it would have looked like if we had taken the actual video. Again using a peper prototype would have eliminated this issue, but finding a way to make it work was well worth it.
 
 
 NOT COMPLETE
 - Talk about PowerPoint presentation pros/cons
 - Talk about video prototype and the challenges with that. Paper one would have been ideal but lack of time forced us to go digital. 
-- Couldn’t incorporate video into powerpoint
 
