--- a/p2.md
+++ b/p2.md
@@ -55,19 +55,9 @@ From the above ideas, we chose to create a storyboard and prototype from idea 2 
 
 ## Reflection
 
-__EVERYONE__
-Having just one brainstorming session and then going right into the storyboard and the video prototype didn't give us as much time to go through several iterations to refine our ideas. Although the brainstorming session was very helpful in generating different types of idea, we couldn’t explore many different creative avenues. We focused our ideas on the results of our investigation in P1. We combine the brainstorming session with the affinity diagramming session. It helped us recognize the different visions that each group member had for different aspects of the system.
+Having just one brainstorming/affinity diagramming session did not provide adequate time for several iterations to refine our ideas. Although the session was very helpful in generating different types of ideas, we could not explore many different creative avenues. Centering our ideas around the results of our investigation in P1 facilitated to focus the discussion. This whole process helped us recognize the different visions that each group member had for different aspects of the system. At the end of the session, we honed in on a few key ideas.
 
-The storyboard came together easily because we were able to produce fairly complete tasks from the brainstorming session. We concentrated on the tasks involved after a correct identification of a wildflower as this gave us a range of tasks to explore instead of just the one identification task.
+We used PowerPoint to create our storyboard and subsequent low-fidelity prototype. The storyboard came together easily because we produced fairly complete tasks from the brainstorming session. We concentrated on the tasks involved after a correct identification of a wildflower as this gave us a range of tasks to explore instead of just the one wildflower identification task. 
 
-We used PowerPoint to create our low-fidelity prototype. Initially we wanted to do a paper prototype, but PowerPoint was a better choice given our individual schedule constraints. Using PowerPoint allowed each team member to work from home. PowerPoint also allowed us to easily add animations and transistions to the views of our system that improved the clarity of the task being demonstrated. It also improved the fluidity of the video prototype. Animations and transitions would have been more time-consuming to show if we had used a paper prototype or stop motion.
-
-When we were ready to record the video prototype, we ran into problems playing the slideshow on our mobile device (an issue that wouldn't have existed if we'd used a paper prototype). If we were to do this again, we would likely use a paper prototype instead of digital media because it would have been faster (we lost some time fixing the bugs with transitions and animations when playing the slideshow our a mobile device). While the PowerPoint definitely made it easier/faster to do animations and transitions, we most likely could have sufficiently demonstrated the functionality of our system without these aethetic features.
-
-We were originally going to film a video which could have played in the powerpoint in order to show how a user would actually take a photo with the sytem, but we were unable to get it imbedded into the powerpoint. This cost us more time and was unfortunate, but we were able to find a different way to represent the photo taking process that works seemlessly and looks a lot like what it would have looked like if we had taken the actual video. Again using a peper prototype would have eliminated this issue, but finding a way to make it work was well worth it.
-
-
-NOT COMPLETE
-- Talk about PowerPoint presentation pros/cons
-- Talk about video prototype and the challenges with that. Paper one would have been ideal but lack of time forced us to go digital. 
+Initially we wanted a paper prototype, but PowerPoint was a better choice given our individual schedule constraints. PowerPoint also allowed us to easily add animations and transitions to the views of our system that improved the clarity of the task being demonstrated. It also improved the fluidity of the video prototype. We ran into a few issues along the way with playing the slideshow on mobile device, attempting to add a recorded video, and bugs with transitions/animations. While the PowerPoint made it easier/faster to do animations and transitions, we most likely could have sufficiently demonstrated the functionality of our system without these aesthetic features.
 
