updated brainstorming section

--- a/p2.md
+++ b/p2.md
@@ -21,6 +21,8 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus ni
 
 ## Brainstorm and Affinity Diagram
 
+We had one brainstorming/affinity diagramming combined session that lasted an hour. This was done by individually sketching ideas onto a sheet of paper. Then each taking turns to discuss their sketches. Centering our ideas around the results of our investigation in P1 helped to focus the discussion. We talked about the similarities and differences between the ideas, and which ones we thought we would like to explore more. Then we grouped the like sketches together for an affinity diagram. The session was productive but we could have benefitted from at least another session. At the end of the session, we honed in on a few key ideas.
+
 __Brainstorming Session__: Each group member came up with 7-8 sketches of various aspects of the system. The following are scans of each group member's brainstorming sketches (1 page per group member).
 
 * [Page 1](https://kowther.github.io/FieldGuide-481/brainstorm_01.jpg)
@@ -30,9 +32,6 @@ __Brainstorming Session__: Each group member came up with 7-8 sketches of variou
 __Affinity Diagramming Session__: We organized each of the above sketches into 4 groups: main menu, identification techniques, journal/log/history, and individual flower descriptions.
 
 ![](https://kowther.github.io/FieldGuide-481/AffinityDiagram.jpg "Image of Affinity Diagram")
-
-__STEPHANIE__
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
 
 After examining the sketches, we chose to elaborate on the 3 most promising ideas:
 
@@ -55,7 +54,7 @@ From the above ideas, we chose to create a storyboard and prototype from idea 2 
 
 ## Reflection
 
-Having just one brainstorming/affinity diagramming session did not provide adequate time for several iterations to refine our ideas. Although the session was very helpful in generating different types of ideas, we could not explore many different creative avenues. Centering our ideas around the results of our investigation in P1 facilitated to focus the discussion. This whole process helped us recognize the different visions that each group member had for different aspects of the system. At the end of the session, we honed in on a few key ideas.
+Having just one brainstorming/affinity diagramming session did not provide adequate time for several iterations to refine our ideas. Although the session was very helpful in generating different types of ideas, we could not explore many different creative avenues. This whole process helped us recognize the different visions that each group member had for different aspects of the system. 
 
 We used PowerPoint to create our storyboard and subsequent low-fidelity prototype. The storyboard came together easily because we produced fairly complete tasks from the brainstorming session. We concentrated on the tasks involved after a correct identification of a wildflower as this gave us a range of tasks to explore instead of just the one wildflower identification task. 
 
