Updated brainstorming, tcsd summary, reflection

--- a/p2.md
+++ b/p2.md
@@ -16,8 +16,9 @@ The storyboard showcases the three tasks the user can engage in once they have c
 
 ## Task-Centered System Walkthrough
 
-__LISA__
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
+* [Raw document containing the TCSD walkthough using the template](https://kowther.github.io/FieldGuide-481/tcsd_walkthrough.pdf)
+
+Summary of issues brought up during task-centred system walkthrough: We realized that a lot of the "knowledge low" issues were caused by buttons having an unclear function, or features being unintentionally hidden due to the lack of indicators. These issues would likely be solved by changing the text on the buttons to improve clarity, or adding labels were they did not previously exist. The "motivation low" issue was caused by the lack of header menu for navigation (in the storyboard and video prototype, the user frequently relied on a back button to move to a previous screen). This issue could be fixed by including a header menu with navigation icons.
 
 ## Brainstorm and Affinity Diagram
 
@@ -29,9 +30,16 @@ __Brainstorming Session__: Each group member came up with 7-8 sketches of variou
 * [Page 2](https://kowther.github.io/FieldGuide-481/brainstorm_02.jpg)
 * [Page 3](https://kowther.github.io/FieldGuide-481/brainstorm_03.jpg)
 
-__Affinity Diagramming Session__: We organized each of the above sketches into 4 groups: main menu, identification techniques, journal/log/history, and individual flower descriptions.
+__Affinity Diagramming Session__: We organized each of the above sketches into 4 groups: main menu, identification techniques, journal/log/history, and individual flower descriptions after identification.
 
 ![](https://kowther.github.io/FieldGuide-481/AffinityDiagram.jpg "Image of Affinity Diagram")
+
+The following are closeup images of each group:
+* [Main Menu](https://kowther.github.io/FieldGuide-481/affinitygroup1.jpg) This group contains sketches regarding what the welcome screen might look like, and any personalization options. These are the first screens a user would see when opening the app for the first time.
+* [Identification techniques](https://kowther.github.io/FieldGuide-481/affinitygroup2.jpg) This group contains sketches regarding the way a user would input information about the wildflower they want to identify.
+* [Log/history](https://kowther.github.io/FieldGuide-481/affinitygroup3.jpg) This group contains sketches regarding how a user's history of flowers found might be stored and displayed, as well as the history of their geographic area.
+* [Info after identifying](https://kowther.github.io/FieldGuide-481/affinitygroup4.jpg) This group contains sketches regarding the way flower descriptons would be presented to the user after identifying a flower.
+
 
 After examining the sketches, we chose to elaborate on the 3 most promising ideas:
 
@@ -56,7 +64,7 @@ From the above ideas, we chose to create a storyboard and prototype from idea 2 
 
 Having just one brainstorming/affinity diagramming session did not provide adequate time for several iterations to refine our ideas. Although the session was very helpful in generating different types of ideas, we could not explore many different creative avenues. This whole process helped us recognize the different visions that each group member had for different aspects of the system. 
 
-We used PowerPoint to create our storyboard and subsequent low-fidelity prototype. The storyboard came together easily because we produced fairly complete tasks from the brainstorming session. We concentrated on the tasks involved after a correct identification of a wildflower as this gave us a range of tasks to explore instead of just the one wildflower identification task. 
+We used PowerPoint to create our storyboard and subsequent low-fidelity prototype. The storyboard came together easily because we produced fairly complete tasks from the brainstorming session. We concentrated on the steps involved after a correct identification of a wildflower as this gave us a range of steps to explore instead of just the one wildflower identification task. Even though the identification is one of the most prominent features of our system, we felt it was too short a task to use as a detailed demonstration of the system.
 
 Initially we wanted a paper prototype, but PowerPoint was a better choice given our individual schedule constraints. PowerPoint also allowed us to easily add animations and transitions to the views of our system that improved the clarity of the task being demonstrated. It also improved the fluidity of the video prototype. We ran into a few issues along the way with playing the slideshow on mobile device, attempting to add a recorded video, and bugs with transitions/animations. While the PowerPoint made it easier/faster to do animations and transitions, we most likely could have sufficiently demonstrated the functionality of our system without these aesthetic features.
 
