Fixed some typos

--- a/p2.md
+++ b/p2.md
@@ -15,10 +15,11 @@ For our video prototype, we created a PowerPoint video of our system. The video 
 The storyboard showcases the three tasks the user can engage in once they have correctly identified a wildflower. ‘Pin to Map’ allows the user to pin their location to a global map (1-4). Clicking on a pin displays the pinned sightings of all users at that specific location. The ‘Learn More’ task (5-6) gives the user detailed information about their find. This is the traditional task associated with field guides. Lastly, the user can add their photo to their personal collection of sightings using ‘Add to My Wildflowers’ (7-9). Their photo is added to the end of the list. The user can then click on the photo, opening a drop-down page, where they can add/change a few more images of that wildflower and add notes. Pressing the ‘home’ icon brings the user back to the main screen (10-11). (All wildflowers photos except the buffalo bean are from http://www.albertawow.com/wildflowers/alberta_wildflowers.htm#)
 
 ## Task-Centered System Walkthrough
+The following walkthrough (based on the above prototype and video) demonstrates a user identifying a flower, then learning more about it and saving it to their flower log.
 
 * [Raw document containing the TCSD walkthough using the template](https://kowther.github.io/FieldGuide-481/tcsd_walkthrough.pdf)
 
-Summary of issues brought up during task-centred system walkthrough: We realized that a lot of the "knowledge low" issues were caused by buttons having an unclear function, or features being unintentionally hidden due to the lack of indicators. These issues would likely be solved by changing the text on the buttons to improve clarity, or adding labels were they did not previously exist. The "motivation low" issue was caused by the lack of header menu for navigation (in the storyboard and video prototype, the user frequently relied on a back button to move to a previous screen). This issue could be fixed by including a header menu with navigation icons.
+Summary of issues brought up during task-centred system walkthrough: We realized that a lot of the "knowledge low" issues were caused by buttons having an unclear function, or features being unintentionally hidden due to the lack of indicators. These issues would likely be solved by changing the text on the buttons to improve clarity, or adding labels where they did not previously exist. The "motivation low" issue was caused by the lack of header menu for navigation (in the storyboard and video prototype, the user frequently relied on a back button to move to a previous screen). This issue could be fixed by including a header menu with navigation icons.
 
 ## Brainstorm and Affinity Diagram
 
@@ -30,7 +31,7 @@ __Brainstorming Session__: Each group member came up with 7-8 sketches of variou
 * [Page 2](https://kowther.github.io/FieldGuide-481/brainstorm_02.jpg)
 * [Page 3](https://kowther.github.io/FieldGuide-481/brainstorm_03.jpg)
 
-__Affinity Diagramming Session__: We organized each of the above sketches into 4 groups: main menu, identification techniques, journal/log/history, and individual flower descriptions after identification.
+__Affinity Diagramming Session__: Each member cut their single sheet of paper to separate the 7-8 ideas that they had sketched. ALl the skketches were of screens at various points throughout the user's interaction with the system. We organized the sketches into 4 groups: main menu, identification techniques, journal/log/history, and individual flower descriptions after identification.
 
 ![](https://kowther.github.io/FieldGuide-481/AffinityDiagram.jpg "Image of Affinity Diagram")
 
@@ -64,7 +65,7 @@ From the above ideas, we chose to create a storyboard and prototype from idea 2 
 
 Having just one brainstorming/affinity diagramming session did not provide adequate time for several iterations to refine our ideas. Although the session was very helpful in generating different types of ideas, we could not explore many different creative avenues. This whole process helped us recognize the different visions that each group member had for different aspects of the system. 
 
-We used PowerPoint to create our storyboard and subsequent low-fidelity prototype. The storyboard came together easily because we produced fairly complete tasks from the brainstorming session. We concentrated on the steps involved after a correct identification of a wildflower as this gave us a range of steps to explore instead of just the one wildflower identification task. Even though the identification is one of the most prominent features of our system, we felt it was too short a task to use as a detailed demonstration of the system.
+We used PowerPoint to create our storyboard and subsequent low-fidelity prototype. The storyboard came together easily because we produced fairly complete tasks from the brainstorming session. We concentrated on the steps involved after a correct identification of a wildflower as this gave us a range of steps to explore instead of just the one wildflower identification task. Even though the identification is one of the most prominent features of our system, we felt it was too short a task to use alone for a detailed demonstration of the system.
 
 Initially we wanted a paper prototype, but PowerPoint was a better choice given our individual schedule constraints. PowerPoint also allowed us to easily add animations and transitions to the views of our system that improved the clarity of the task being demonstrated. It also improved the fluidity of the video prototype. We ran into a few issues along the way with playing the slideshow on mobile device, attempting to add a recorded video, and bugs with transitions/animations. While the PowerPoint made it easier/faster to do animations and transitions, we most likely could have sufficiently demonstrated the functionality of our system without these aesthetic features.
 
