--- a/p2.md
+++ b/p2.md
@@ -19,7 +19,7 @@ The following walkthrough (based on the above prototype and video) demonstrates 
 
 * [Raw document containing the TCSD walkthough using the template](https://kowther.github.io/FieldGuide-481/tcsd_walkthrough.pdf)
 
-Summary of issues brought up during task-centred system walkthrough: We realized that a lot of the "knowledge low" issues were caused by buttons having an unclear function, or features being unintentionally hidden due to the lack of indicators. These issues would likely be solved by changing the text on the buttons to improve clarity, or adding labels where they did not previously exist. The "motivation low" issue was caused by the lack of header menu for navigation (in the storyboard and video prototype, the user frequently relied on a back button to move to a previous screen). This issue could be fixed by including a header menu with navigation icons.
+Summary of issues brought up during task-centred system walkthrough: We realized that a lot of the "knowledge low" issues were caused by buttons having an unclear function, or features being unintentionally hidden due to the lack of indicators. These issues would likely be solved by changing the text on the buttons to improve clarity, or adding labels where they did not previously exist. The "motivation low" issues were caused by the lack of a header menu for navigation (in the storyboard and video prototype, the user frequently relied on a back button to move to a previous screen). This issue could be fixed by including a header menu with navigation icons so the user doesn't have to put as much effort into finding their way around the system.
 
 ## Brainstorm and Affinity Diagram
 
@@ -68,4 +68,6 @@ Having just one brainstorming/affinity diagramming session did not provide adequ
 We used PowerPoint to create our storyboard and subsequent low-fidelity prototype. The storyboard came together easily because we produced fairly complete tasks from the brainstorming session. We concentrated on the steps involved after a correct identification of a wildflower as this gave us a range of steps to explore instead of just the one wildflower identification task. Even though the identification is one of the most prominent features of our system, we felt it was too short a task to use alone for a detailed demonstration of the system.
 
 Initially we wanted a paper prototype, but PowerPoint was a better choice given our individual schedule constraints. PowerPoint also allowed us to easily add animations and transitions to the views of our system that improved the clarity of the task being demonstrated. It also improved the fluidity of the video prototype. We ran into a few issues along the way with playing the slideshow on mobile device, attempting to add a recorded video, and bugs with transitions/animations. While the PowerPoint made it easier/faster to do animations and transitions, we most likely could have sufficiently demonstrated the functionality of our system without these aesthetic features.
+
+The task-centred system design walkthrough was a great way to closely examine every step of the user's interaction with the system and notice the issues early enough to fix them. The biggest struggle we faced doing the walkthrough was that we were already familiar with the system. We knew what every button did and what we needed to do without any instruction. This made it difficult at times to get into the mind of the user and figure out how they would feel at each step and imagine which parts might be confusing to them.
 
