Updated tscd write up with task info

--- a/p2.md
+++ b/p2.md
@@ -15,7 +15,7 @@ For our video prototype, we created a PowerPoint video of our system. The video 
 The storyboard showcases the three tasks the user can engage in once they have correctly identified a wildflower. ‘Pin to Map’ allows the user to pin their location to a global map (1-4). Clicking on a pin displays the pinned sightings of all users at that specific location. The ‘Learn More’ task (5-6) gives the user detailed information about their find. This is the traditional task associated with field guides. Lastly, the user can add their photo to their personal collection of sightings using ‘Add to My Wildflowers’ (7-9). Their photo is added to the end of the list. The user can then click on the photo, opening a drop-down page, where they can add/change a few more images of that wildflower and add notes. Pressing the ‘home’ icon brings the user back to the main screen (10-11). (All wildflowers photos except the buffalo bean are from http://www.albertawow.com/wildflowers/alberta_wildflowers.htm#)
 
 ## Task-Centered System Walkthrough
-The following walkthrough (based on the above prototype and video) demonstrates a user identifying a flower, then learning more about it and saving it to their flower log.
+The following walkthrough (based on the above prototype and video) demonstrates a user identifying a flower, then learning more about it and saving it to their flower log. For our walkthrough we used the first task from our list of tasks defined in P1 in order to walk through the prototype and video to determine any issues and possible fixes that could be made based on the task that the user would like to complete. 
 
 * [Raw document containing the TCSD walkthough using the template](https://kowther.github.io/FieldGuide-481/tcsd_walkthrough.pdf)
 
