--- a/p2.md
+++ b/p2.md
@@ -19,7 +19,7 @@ The following walkthrough (based on the above prototype and video) demonstrates 
 
 For our Task-Centered System Walkthrough we used the following task from P1 in order to walk through our video prototype and storyboard to determine any issues and possible fixes that could be made based on the task the user would like to be able to complete. 
 
-"Brent is a tech savvy individual who enjoys being outdoors and learning about nature around him. He starts walking in Fish Creek Park and sees a flower that draws his attention. He wants to get out his field guide and determine the common name (doesn’t care about the scientific name), whether it is common or rare, if it is a native flower or if it was brought to this location by others, if it is invasive poisonous/harmful, any interesting facts or stories surrounding this flower (like corpse plant that doesn’t bloom annually and smells like rotting flesh). He would like to save an image of it with a date stamp, month, day, year, time and location and be able to share it to friends."
+_"Brent is a tech savvy individual who enjoys being outdoors and learning about nature around him. He starts walking in Fish Creek Park and sees a flower that draws his attention. He wants to get out his field guide and determine the common name (doesn’t care about the scientific name), whether it is common or rare, if it is a native flower or if it was brought to this location by others, if it is invasive poisonous/harmful, any interesting facts or stories surrounding this flower (like corpse plant that doesn’t bloom annually and smells like rotting flesh). He would like to save an image of it with a date stamp, month, day, year, time and location and be able to share it to friends."_
 
 * [Raw document containing the TCSD walkthough using the template](https://kowther.github.io/FieldGuide-481/tcsd_Finalv2.pdf)
 
