--- a/p2.md
+++ b/p2.md
@@ -15,9 +15,8 @@ For our video prototype, we created a PowerPoint video of our system. The video 
 The storyboard showcases the three tasks the user can engage in once they have correctly identified a wildflower. ‘Pin to Map’ allows the user to pin their location to a global map (1-4). Clicking on a pin displays the pinned sightings of all users at that specific location. The ‘Learn More’ task (5-6) gives the user detailed information about their find. This is the traditional task associated with field guides. Lastly, the user can add their photo to their personal collection of sightings using ‘Add to My Wildflowers’ (7-9). Their photo is added to the end of the list. The user can then click on the photo, opening a drop-down page, where they can add/change a few more images of that wildflower and add notes. Pressing the ‘home’ icon brings the user back to the main screen (10-11). (All wildflowers photos except the buffalo bean are from http://www.albertawow.com/wildflowers/alberta_wildflowers.htm#)
 
 ## Task-Centered System Walkthrough
-The following walkthrough (based on the above prototype and video) demonstrates a user identifying a flower, then learning more about it and saving it to their flower log.
 
-For our Task-Centered System Walkthrough we used the following task from P1 in order to walk through our video prototype and storyboard to determine any issues and possible fixes that could be made based on the task the user would like to be able to complete. 
+For our Task-Centered System Walkthrough we used the task below from P1 in order to walk through our video prototype and storyboard to determine any issues and possible fixes that could be made based on the task the user would like to be able to complete. The following walkthrough demonstrates a user identifying a flower, then learning more about it and saving it to their flower log.
 
 _"Brent is a tech savvy individual who enjoys being outdoors and learning about nature around him. He starts walking in Fish Creek Park and sees a flower that draws his attention. He wants to get out his field guide and determine the common name (doesn’t care about the scientific name), whether it is common or rare, if it is a native flower or if it was brought to this location by others, if it is invasive poisonous/harmful, any interesting facts or stories surrounding this flower (like corpse plant that doesn’t bloom annually and smells like rotting flesh). He would like to save an image of it with a date stamp, month, day, year, time and location and be able to share it to friends."_
 
@@ -53,12 +52,12 @@ The following are closeup images of each group:
 [Info after identifying](https://kowther.github.io/FieldGuide-481/affinitygroup4.jpg) This group contains sketches regarding the way flower descriptons would be presented to the user after identifying a flower.
 
 
-After examining the sketches, we chose to elaborate on the 3 most promising ideas:
+After examining the sketches, we chose to elaborate on the three most promising ideas:
 
 ![](https://kowther.github.io/FieldGuide-481/annotated_myflowers.png "Close up 1: Photo Storage")
 _Close up 1: Photo Storage_
 
-Many of the current apps do not have the option of taking and storing your own photos of wildflower sightings. Our researched showed that there is an interest in this type of feature. For our idea, once a user has identified a wildflower, they can store their photo in a photo journal. The sketch illustrates that when a photo is clicked a drop-down page pops up. The page has the date, time, name of the flower, and space for notes. It has a button that takes you to the flower description page (not shown). It also has space for a few secondary photos of that plant (there is a limit of how many secondary photos). The user has the option of setting any photo as the primary photo. The photos can be saved onto the phone's storage or shared on social media. 
+Many of the current apps do not have the option of taking and storing your own photos of wildflower sightings. Our researched showed that there is an interest in this type of feature. For our idea, once a user has identified a wildflower, they can store their photo in a photo journal. The sketch illustrates that when a photo is clicked a drop-down page appears. The page has the date, time, name of the flower, and space for notes. It has a button that takes you to the flower description page (not shown). It also has space for a few secondary photos of that plant (there is a limit of how many secondary photos). The user has the option of setting any photo as the primary photo. The photos can be saved onto the phone's storage or shared on social media. 
 
 ![](https://kowther.github.io/FieldGuide-481/descriptionannotationv2.png "Close up 2: Description Page")
 _Close up 2: Description Page_
@@ -70,7 +69,7 @@ _Close up 3: Recognition Page_
 
 This is the screen that the user sees when they want to identify their wildflower using image recognition. If they want to use their camera to take a new photo, a distinct box indicates the frame in which the user should position their view of the flower before pressing the ready button. Users also have the option to go to their Gallery/Camera Roll to use an image that they took before.
 
-From the above ideas, we chose to create a storyboard and prototype from idea 2 (wildflower info after being identified) because it is one of the most prominent features of our system. We wanted to elaborate on what the user would be able to do after identifying a flower, as well as organize how these aspects of the system would be displayed.
+From the above ideas, we chose to create a storyboard and prototype from idea 2 (exploring wildflower information after being identified) because it is one of the most prominent features of our system. We wanted to elaborate on what the user would be able to do after identifying a flower, as well as organize how these aspects of the system would be displayed.
 
 ## Reflection
 
