--- a/p2.md
+++ b/p2.md
@@ -16,13 +16,13 @@ The storyboard showcases the three tasks the user can engage in once they have c
 
 ## Task-Centered System Walkthrough
 
-For our Task-Centered System Walkthrough we used the task below from P1 in order to walk through our video prototype and storyboard to determine any issues and possible fixes that could be made based on the task the user would like to be able to complete. The following walkthrough demonstrates a user identifying a flower, then learning more about it and saving it to their flower log.
+For our Task-Centered System Walkthrough we used the task description below from P1 in order to walk through our video prototype and storyboard to determine any issues and possible fixes that could be made based on the task the user would like to be able to complete. The following walkthrough demonstrates a user identifying a flower, then learning more about it and saving it to their flower log.
 
 _"Brent is a tech savvy individual who enjoys being outdoors and learning about nature around him. He starts walking in Fish Creek Park and sees a flower that draws his attention. He wants to get out his field guide and determine the common name (doesn’t care about the scientific name), whether it is common or rare, if it is a native flower or if it was brought to this location by others, if it is invasive poisonous/harmful, any interesting facts or stories surrounding this flower (like corpse plant that doesn’t bloom annually and smells like rotting flesh). He would like to save an image of it with a date stamp, month, day, year, time and location and be able to share it to friends."_
 
-* [Raw document containing the TCSD walkthough using the template](https://kowther.github.io/FieldGuide-481/tcsd_Finalv2.pdf)
+* [Task-Centered System Walkthrough](https://kowther.github.io/FieldGuide-481/tcsd_Finalv2.pdf)
 
-Summary of issues brought up during task-centred system walkthrough: We realized that a lot of the "knowledge low" issues were caused by buttons having an unclear function, or features being unintentionally hidden due to the lack of indicators. These issues would likely be solved by changing the text on the buttons to improve clarity, or adding labels where they did not previously exist. The "motivation low" issues were caused by the lack of a header menu for navigation (in the storyboard and video prototype, the user frequently relied on a back button to move to a previous screen). This issue could be fixed by including a header menu with navigation icons so the user doesn't have to put as much effort into finding their way around the system.
+After completing the walkthrough, we realized that many of the "knowledge low" issues were caused by buttons having an unclear function, or features being unintentionally hidden due to the lack of indicators. These issues would likely be solved by changing the text on the buttons to improve clarity, or adding labels where they did not previously exist. The "motivation low" issues were caused by the lack of a header menu for navigation (in the storyboard and video prototype, the user frequently relied on a back button to move to a previous screen). This issue could be fixed by including a header menu with navigation icons so the user doesn't have to put as much effort into finding their way around the system.
 
 ## Brainstorm and Affinity Diagram
 
